    get_object_vars). (mhagstrand)
  . Fixed bug #73954 (NAN check fails on Alpine Linux with musl). (Andrea)
  . Fixed bug #74039 (is_infinite(-INF) returns false). (Christian Schmidt)

- Apache:
  . Fixed bug #61471 (Incomplete POST does not timeout but is passed to PHP).
    (Zheng Shao)

- GD:
  . Fixed bug #74031 (ReflectionFunction for imagepng is missing last two
    parameters). (finwe)

- OpenSSL:
  . Fixed bug #74022 (PHP Fast CGI crashes when reading from a pfx file).
    (Anatol)

- Reflection:
  . Fixed bug #74035 (getNumberOfRequiredParameters wrong for
    ReflectionClass::newInstance). (Andrew Nester)

- Standard:
  . Fixed bug #74005 (mail.add_x_header causes RFC-breaking lone line feed).
    (Anatol)


16 Feb 2017 PHP 7.0.16

- Core:
  . Fixed bug #73916 (zend_print_flat_zval_r doesn't consider reference).
    (Laruence)
  . Fixed bug #73876 (Crash when exporting **= in expansion of assign op).
    (Sara)
  . Fixed bug #73969 (segfault in debug_print_backtrace). (andrewnester)
  . Fixed bug #73973 (assertion error in debug_zval_dump). (andrewnester)

- DOM:
  . Fixed bug #54382 (getAttributeNodeNS doesn't get xmlns* attributes).
    (aboks)

- DTrace:
  . Fixed bug #73965 (DTrace reported as enabled when disabled). (Remi)

- FPM:
  . Fixed bug #67583 (double fastcgi_end_request on max_children limit).
    (Dmitry Saprykin)
  . Fixed bug #69865 (php-fpm does not close stderr when using syslog). 
    (m6w6)

- GD:
  . Fixed bug #73968 (Premature failing of XBM reading). (cmb)

- GMP:
  . Fixed bug #69993 (test for gmp.h needs to test machine includes).
    (Jordan Gigov) 

- Intl:
  . Fix bug #73956 (Link use CC instead of CXX). (Remi)

- LDAP:
  . Fixed bug #73933 (error/segfault with ldap_mod_replace and opcache).
    (Laruence)

- MySQLi:
  . Fixed bug #73949 (leak in mysqli_fetch_object). (krakjoe)

- Mysqlnd:
  . Fixed bug #69899 (segfault on close() after free_result() with mysqlnd).
    (Richard Fussenegger)

- Opcache: